# django-ratelimiter

./: .readthedocs.yaml  LICENSE  Makefile  README.md  compose.yml  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: publish.yaml  workflow.yml
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/search/: search_index.json
0.1.2/: 404.html  index.html  objects.inv  sitemap.xml
0.1.2/api_reference/: index.html
0.1.2/search/: search_index.json
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/api_reference/: index.html
0.2.0/decorator/: index.html
0.2.0/middleware/: index.html
0.2.0/search/: search_index.json
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/api_reference/: index.html
0.2.1/decorator/: index.html
0.2.1/middleware/: index.html
0.2.2/: 404.html  index.html  sitemap.xml
0.2.2/api_reference/: index.html
0.2.2/decorator/: index.html
0.2.2/middleware/: index.html
0.2.2/search/: search_index.json
django_limits/: __init__.py  decorator.py  storage.py  types.py
django_ratelimiter/: __init__.py  decorator.py  middleware.py  storage.py  types.py  utils.py
docs/: api_reference.md  decorator.md  index.md  middleware.md  requirements.txt
test_app/: asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
tests/: conftest.py  test_decorator.py  test_middleware.py  test_storage.py  utils.py
